--- a/index.html
+++ b/index.html
@@ -62,6 +62,190 @@
           </nav>
     </header>
 
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-8 my-4">
+
+                    <!-- Top -->
+
+                    <div class="top-col d-flex justify-content-between">
+                        <h2 class="title-col">Catalogo Libri</h2>
+
+                        <button type="button" class="btn btn-primary">Aggiungi Libro</button>
+                    </div>
+
+                    <!-- Table -->
+
+                    <table class="table table-striped">
+
+                        <thead>
+                          <tr>
+                            <th colspan="2">Titolo</th>
+                            <th class="d-none d-md-table-cell">Data Prestito</th>
+                            <th>Stato</th>
+                            <th class="text-center">Azioni</th>
+                          </tr>
+                        </thead>
+
+                        <tbody>
+
+                          <!-- Row 1 -->
+
+                          <tr>
+                            <td colspan="2">I pilastri della terra</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center d-flex">
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></span>
+                            </td>
+                          </tr>
+
+                          <!-- Row 2 -->
+
+                          <tr>
+                            <td colspan="2">I promessi sposi</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center d-flex">
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></span>
+                            </td>
+                          </tr>
+
+                          <!-- Row 3 -->
+
+                          <tr>
+                            <td colspan="2">Il signore degli anelli</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-warning text-light">In prestito</span></td>
+                            <td class="text-center d-flex">
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></span>
+                            </td>
+                          </tr>
+
+                          <!-- Row 4 -->
+
+                          <tr>
+                            <td colspan="2">Harry Potter e la pietra filosofale</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center d-flex">
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></span>
+                            </td>
+                          </tr>
+
+                          <!-- Row 5 -->
+
+                          <tr>
+                            <td colspan="2">Il codice Da Vinci</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-danger">Non disponibile</span></td>
+                            <td class="text-center d-flex">
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></span>
+                            </td>
+                          </tr>
+
+                          <!-- Row 6 -->
+
+                          <tr>
+                            <td colspan="2">Shining</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center d-flex">
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></span>
+                            </td>
+                          </tr>
+
+                          <!-- Row 7 -->
+
+                          <tr>
+                            <td colspan="2">La divina Commedia</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-warning text-light">In prestito</span></td>
+                            <td class="text-center d-flex">
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></span>
+                            </td>
+                          </tr>
+
+                          <!-- Row 8 -->
+
+                          <tr>
+                            <td colspan="2">Il trono di spade</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center d-flex">
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></span>
+                            </td>
+                          </tr>
+
+                          <!-- Row 9 -->
+
+                          <tr>
+                            <td colspan="2">Il mondo di Sofia</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-danger">Non disponibile</span></td>
+                            <td class="text-center d-flex">
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></span>
+                            </td>
+                          </tr>
+
+                          <!-- Row 10 -->
+
+                          <tr>
+                            <td colspan="2">Le cronache di Narnia: il leone, la strega e l'armadio</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-warning text-light">In prestito</span></td>
+                            <td class="text-center d-flex">
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></span>
+                            </td>
+                          </tr>
+
+                          <!-- Row 11 -->
+
+                          <tr>
+                            <td colspan="2">Il piccolo principe</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center d-flex">
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></span>
+                            </td>
+                          </tr>
+
+                          <!-- Row 12 -->
+
+                          <tr>
+                            <td colspan="2">La storia infinita</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center d-flex">
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
+                                <span class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></span>
+                            </td>
+                          </tr>
+
+                        </tbody>
+                      </table>
+
+                </div>
+                
+                <div class="col-12 col-lg-4">
+
+                </div>
+            </div>
+        </div>
+    </main>
+
     <!-- Bootstrap Script -->
 
     <script 
