--- a/index.html
+++ b/index.html
@@ -64,8 +64,11 @@
 
     <main>
         <div class="container">
-            <div class="row">
-                <div class="col-12 col-lg-8 my-4">
+            <div class="row my-4 d-lg-flex">
+
+                <!-- Col 1 -->
+
+                <div class="col-12 col-lg-9">
 
                     <!-- Top -->
 
@@ -118,7 +121,7 @@
 
                           <tr>
                             <td colspan="2">Il signore degli anelli</td>
-                            <td class="d-none d-md-table-cell">-</td>
+                            <td class="d-none d-md-table-cell">18/10/2023</td>
                             <td><span class="badge text-bg-warning text-light">In prestito</span></td>
                             <td class="text-center d-flex">
                                 <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
@@ -166,7 +169,7 @@
 
                           <tr>
                             <td colspan="2">La divina Commedia</td>
-                            <td class="d-none d-md-table-cell">-</td>
+                            <td class="d-none d-md-table-cell">21/09/2023</td>
                             <td><span class="badge text-bg-warning text-light">In prestito</span></td>
                             <td class="text-center d-flex">
                                 <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
@@ -202,7 +205,7 @@
 
                           <tr>
                             <td colspan="2">Le cronache di Narnia: il leone, la strega e l'armadio</td>
-                            <td class="d-none d-md-table-cell">-</td>
+                            <td class="d-none d-md-table-cell">25/07/2023</td>
                             <td><span class="badge text-bg-warning text-light">In prestito</span></td>
                             <td class="text-center d-flex">
                                 <span class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></span>
@@ -238,9 +241,76 @@
                       </table>
 
                 </div>
-                
-                <div class="col-12 col-lg-4">
 
+                <!-- Col 2 -->
+                
+                <div class="col-12 col-lg-3">
+
+                  <!-- Card 1 -->
+
+                  <div class="card mb-3">
+                    <div class="card-header fs-3">
+                      Todo
+                    </div>
+                    <div class="card-body">
+                      <ul class="list-group">
+                        <li class="list-group-item d-flex">
+                          <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                          <label class="form-check-label" for="firstCheckbox">Chiamare segreteria</label>
+                        </li>
+                        <li class="list-group-item d-flex">
+                          <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+                          <label class="form-check-label" for="secondCheckbox">Mandare avvisi prestiti scaduti</label>
+                        </li>
+                        <li class="list-group-item d-flex">
+                          <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+                          <label class="form-check-label" for="thirdCheckbox">Ordinare nuovi libri</label>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <!-- Card 2 -->
+
+                  <div class="card mb-3">
+                    <div class="card-header fs-3">
+                      F.A.Q.
+                    </div>
+                    <div class="card-body">
+                      <div class="accordion accordion-flush" id="accordionFlushExample">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                              Come aggiungere un nuovo libro?
+                            </button>
+                          </h2>
+                          <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, ullam.</div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                              Come posso accedere all'anagrafica utenti?
+                            </button>
+                          </h2>
+                          <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, ullam.</div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                              Posso usare questa dashboard da mobile?
+                            </button>
+                          </h2>
+                          <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, ullam.</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
             </div>
         </div>
