--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     
-    <title>Bootstrap Dashboard</title>
+    <title>Catalogo Libri</title>
 </head>
 <body>
 
@@ -41,7 +41,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Catalogo Libri</a>
+                    <a class="nav-link active" aria-current="page" href="./add-book.html">Catalogo Libri</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Anagrafica Utenti</a>
