--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
                     <div class="top-col d-flex justify-content-between">
                         <h2 class="title-col">Catalogo Libri</h2>
 
-                        <button type="button" class="btn btn-primary">Aggiungi Libro</button>
+                        <a href="./add-book.html">
+                          <button type="button" class="btn btn-primary">Aggiungi Libro</button>
+                        </a>
                     </div>
 
                     <!-- Table -->
