add notes + checkbox + button

--- a/add-book.html
+++ b/add-book.html
@@ -110,11 +110,14 @@
 
           <div class="col-12 col-lg-4">
             <label for="exampleFormSelectInput1" class="form-label fs-5">Genere</label>
-            <select class="form-select fs-5 mb-3" aria-label="Default select example">
+            <select class="form-select fs-5 mb-3 overflow-auto" aria-label="Default select example">
               <option selected>Scegli il genere</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+              <option value="1">Biografia e Autobiografia</option>
+              <option value="2">Thriller</option>
+              <option value="3">Avventura e Azione</option>
+              <option value="4">Giallo</option>
+              <option value="5">Fantasy</option>
+              <option value="6">Horror</option>
             </select>
           </div>
 
@@ -137,14 +140,37 @@
           </div>  
         </div>
 
+        <!-- Divider -->
+
         <div class="divider mb-3">
           <hr>
         </div>
 
-        <div class="mb-3">
-          <label for="exampleFormControlTextarea1" class="form-label fs-5">Note</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Inserisci eventuali note sul libro"></textarea>
+        <!-- Notes -->
+
+        <div class="notes row">
+          <div class="col-12">
+            <div class="mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label fs-5">Note</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Inserisci eventuali note sul libro"></textarea>
+            </div>
+          </div>
         </div>
+
+        <!-- Digital -->
+
+        <div class="form-check fs-5 mb-3">
+          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <label class="form-check-label" for="flexCheckDefault">
+            Disponibile anche in digitale
+          </label>
+        </div>
+
+        <!-- Add Book Button -->
+
+        <a href="./index.html">
+          <button type="button" class="btn btn-primary">Aggiungi Libro</button>
+        </a>
     
       </div>
     </main>
